@@ -8,12 +8,15 @@ TODO: unready_all
 TODO: myhttpd header parsing
 TODO: channel->maxsize(newsize)?
 
+TODO: times per-coroutine
 	- deprecate Coro::Socket, document how to get ipv6 support via
           AnyEvent::Socket instead.
 	- implement signal->wait ($cb) interface, similar to semaphores.
         - work around SvOK not supporting getmagic, so we have to getmagic
           to test for undef :/ (reported by Matthias Waldorf).
         - load Coro::AnyEvent in all modules using AnyEvent.
+        - work around perl corrupting our internal data structures,
+          reported by Tokuhiro Matsuno.
 
 5.14  Wed Jun 24 01:37:48 CEST 2009
 	- provide explicit functions to "cede" to the event loop in Coro::AnyEvent,
